# voxcraft-sim

./: .clang-format  CMakeLists.txt  README.md
data/: base.vxa  robot.vxd
lib/: refl.hpp
lib/backward-cpp/: .gitignore
lib/fmt/doc/: build.py  conf.py
lib/fmt/support/: build-docs.py  compute-powers.py  docopt.py  manage.py  printable.py  rst2md.py
lib/fmt/support/rtd/: conf.py
lib/pybind11/docs/: benchmark.py
lib/pybind11/tests/: test_callbacks.py  test_const_name.py  test_kwargs_and_defaults.py  test_pytypes.py
src/executables/: test.cu  voxcraft_sim.cu
src/python/: init.cu
src/utils/: vx3_barrier.h  vx3_conf.h  vx3_cuda.cuh  vx3_def.cu  vx3_def.h  vx3_force_field.h  vx3_hash.h  vx3_math_tree.h  vx3_quat3d.h  vx3_reduce.cuh  vx3_search.cuh  vx3_soa.h  vx3_vec3d.h
src/vx3/: vx3.hpp  vx3_context.h  vx3_link.cu  vx3_link.h  vx3_link_material.cu  vx3_link_material.h  vx3_material.cu  vx3_material.h  vx3_signal.h  vx3_simulation_manager.cu  vx3_simulation_manager.h  vx3_simulation_record.cu  vx3_simulation_record.h  vx3_voxel.cu  vx3_voxel.h  vx3_voxel_material.cu  vx3_voxel_material.h  vx3_voxelyze_kernel.cu  vx3_voxelyze_kernel.cuh  vx3_voxelyze_kernel_manager.cu  vx3_voxelyze_kernel_manager.cuh
src/vxa/: vx3_config.cu  vx3_config.h
test/googletest/googlemock/scripts/: pump.py
test/googletest/googletest/: README.md
test/googletest/googletest/test/: gtest_xml_outfiles_test.py  gtest_xml_output_unittest.py  gtest_xml_test_utils.py
